This is the ChangeLog of the clone project

Created by Dr. Rolf Jansen on 2013-02-19.
Copyright (c) 2013. All rights reserved.

Note: Milestones are embraced with ••••


2013-08-27 18:25  rj - r45

   * clone.c, utils.c
     - Formatting.
     - Changed parameter name inode to key in findINode(), storeINode(), removeINode().

2013-08-19 16:05  rj - r44

   * clone.c, utils.h, utils.c
     - added ToDo list at the head of the main file (clone.c).
     - check source file system type and its readonly flag.
     - if the source file system is readonly then make the clone writable by the owner.
     - some code reorganizations, e.g. unction setAttributes() has been moved to the main file.

2013-08-12 22:33  rj - r43

   * utils.c
     - set st_birthtimespec to the cloned item only if it got a valid value.

2013-08-12 22:20  rj - r42

   * clone.c
     - NFS and other file systems don't have file creation dates, so desconsider st_birthtimespec in these cases.


•••• 2013-06-27 -- Created a snapshot of r41 for release as v1.0.2, provided it for download at GC, and submitted it to FreeBSD ports ••••


2013-06-27 10:03  rj - r41

   * clone.c
     - fixed deletion of directories and files in the destination in synchronization mode
     - release of version to 1.0.2 (r41)

2013-06-01 04:13  rj - r40

   * clone.c, utils.h:
     - formatting, orthography

2013-02-23 13:18  rj - r39

   * clone.c, utils.h:
     - streamlined stage passing between reader() and writer()

2013-02-22 11:10  rj - r38

   * clone.c:
     - qitems are kept initialized in the dispenser, so, no need to initialize them again in dispenseNewQItem()
     - removed unecessary helper variables and constructs from writer()
     - in writer() clean-up everything at one central stage below the cleanfinish label
     - release src and dst paths in reverse order as they were allocated, i.e. free() dst first
     - set version to 1.0.2b

